# MEPHILABS

./: .gitignore  info  Математическая статистика 980faf31027b42818d8468cfe96b5279.md
Labs 1 Sem/lab1/: lab1  lab1.c  lab12.c
Labs 1 Sem/lab2/: lab2  lab2.c
Labs 1 Sem/lab3/: lab3a  lab3a.c  lab3b  lab3b.c
Labs 1 Sem/lab3/functions/: gr.c  gr.h  memc.c  memc.h  readstr.c  readstr.h  slen.c  slen.h  sortm.c  sortm.h  vwords.c  vwords.h
Labs 1 Sem/lab3F/lab3F/: lab3  main.c
Labs 1 Sem/lab3F/lab3F/F/: gr.c  gr.h  memc.c  memc.h  readstr.c  readstr.h  slen.c  slen.h  sortm.c  sortm.h  vwords.c  vwords.h
Labs 1 Sem/lab4/: Makefile  input.c  input.h  lab4  lab4.c  menu.c  menu.h  text1.txt  text2.txt
Labs 1 Sem/lab4 2/Sorts/: shaker_sort.h
Labs 1 Sem/lab4 2/sort_fx/: compare_swap.c
Labs 1 Sem/lab4/sorts/: double_selection_sort.c  double_selection_sort.h  insertion_sort.c  insertion_sort.h  shaker_sort.c  shaker_sort.h
Labs 1 Sem/lab4/sorts/sort_fx/: compare_swap.c  compare_swap.h  struct.h
Labs 1 Sem/lab5/: Makefile  lab5  lab5.c  text_in  text_out
Labs 1 Sem/lab5/Functions/: change.c  change.h  delete.c  delete.h  menu.c  menu.h  other_functions.c  other_functions.h  randv.c  randv.h
Labs 1 Sem/lab6/: lab6  lab6.c
Labs 1 Sem/lab6 2/lab6/: main.c
Labs 2 Sem/lab1/: test.c
Labs 2 Sem/lab2/: CMakeLists.txt  Makefile  main.cpp
Labs 2 Sem/lab2/DynamicArray/: DynamicArray.h
Labs 2 Sem/lab2/Matrix/: matrix.h
Labs 2 Sem/lab2/Menu/: Menu.cpp  Menu.h
Labs 2 Sem/lab2/Sequence/ArraySequence/: ArraySequence.h
Labs 2 Sem/lab2/Tests/: test.cpp  test.h
Labs 2 Sem/lab3/: Makefile  lab4  main.cpp
Labs 3 Sem/lab1/: CMakeLists.txt  main.cpp
Labs 3 Sem/lab1/App/: App.cpp  Chart.cpp  Chart.h  MainFrame.cpp  MainFrame.h  Shower.cpp  Shower.h
Labs 3 Sem/lab1/DynamicArray/: DynamicArray.h
Labs 3 Sem/lab1/ISorter/: ISorter.cpp  ISorter.h
Labs 3 Sem/lab1/LinkedList/: LinkedList.h
Labs 3 Sem/lab1/Sequence/: Sequence.cpp  Sequence.h
Labs 3 Sem/lab1/Sequence/ArraySequence/: ArraySequence.cpp
Labs 3 Sem/lab1/Sequence/LinkedListSequence/: LinkedListSequence.cpp  LinkedListSequence.h
Labs 3 Sem/lab1/Tests/: test.cpp  test.h
Labs 3 Sem/lab2/: .gitignore  CMakeLists.txt  main.cpp
Labs 3 Sem/lab2/App/: App.cpp  App.h  Chart.cpp  Chart.h  MainFrame.cpp  MainFrame.h  Presenter.cpp  Presenter.h
Labs 3 Sem/lab2/HashTable/: HashTable.cpp  HashTable.h
Labs 3 Sem/lab2/Tasks/Packing/: BagPacking.h
Labs 3 Sem/lab2/Tasks/SubSequence/: CountSubSequence.h
Labs 3 Sem/lab2/Tests/: tests.cpp  tests.h
Labs 3 Sem/lab2/Tree/: Tree.hpp
Labs 3 Sem/lab3/: CMakeLists.txt  Graph.cpp  Graph.h  Tests.cpp  Tests.h  main.cpp
